# finitary-derive

./: .vimrc  CHANGELOG.md  README.md  cabal.project  finitary-derive.cabal
src/Data/Finitary/: Big.hs  Coercion.hs  Finiteness.hs  Internal.hs  Pack.hs  PackBits.hs  PackBytes.hs  PackInto.hs  PackWords.hs  Small.hs  SmallAs.hs
src/Data/Finitary/BitPacked/: Mutable.hs
src/Data/Finitary/PackBits/: Unsafe.hs
test/: Main.hs
