cabal-version:       2.2
name:                finitary-derive
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
synopsis:            Various derivations for types with Finite instances.
-- description:
homepage:            https://notabug.org/koz.ross/finitary-derive
license:             GPL-3.0-or-later
license-file:        LICENSE.md
author:              Koz Ross
maintainer:          koz.ross@retro-freedom.nz
copyright:           (C) Koz Ross 2019
category:            Data
tested-with:         GHC == 8.6.5
build-type:          Simple
extra-source-files:  CHANGELOG.md,
                     README.md

library
  exposed-modules:     Data.Finitary.PackInto,
                       Data.Finitary.Big
  other-modules:       Data.Finitary.Internal
  build-depends:       base >= 4.11 && < 4.13,
                       finitary >= 0.1.0.0 && < 1.0.0.0,
                       vector >= 0.12.0.3 && < 0.13.0.0,
                       coercible-utils >= 0.0.0 && < 0.1.0,
                       finite-typelits >= 0.1.4.2 && < 0.2.0.0,
                       binary >= 0.8.6.0 && < 1.0.0.0,
                       deepseq >= 1.4.4.0 && < 2.0.0.0
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  -- other-modules:
  hs-source-dirs:      test
  build-depends:       base >= 4.12 && < 5,
                       hedgehog
  default-language:    Haskell2010
